--- a/style.scss
+++ b/style.scss
@@ -186,7 +186,7 @@
   position: fixed;
   top: 15px;
   left: 25px;
-  width: 45px;
+  width: 40px;
   height: 45px;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
@@ -200,7 +200,7 @@
 }
 
 .hamburger .line:nth-child(1) {
-  top: 5px;
+  top: 3px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
   -o-transform-origin: left center;
@@ -208,7 +208,7 @@
 }
 
 .hamburger .line:nth-child(2) {
-  top: 10px;
+  top: 3px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
   -o-transform-origin: left center;
@@ -216,7 +216,7 @@
 }
 
 .hamburger .line:nth-child(3) {
-  top: 34px;
+  top: 23px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
   -o-transform-origin: left center;
@@ -228,8 +228,9 @@
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
-  top:  5px;
-  left: 8px;
+  background: black;
+  top:  6px;
+  left: 5px;
 }
 
 .hamburger.open .line:nth-child(2) {
@@ -242,8 +243,9 @@
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
-  top: 35px;
-  left: 8px;
+  background: black;
+  top: 33px;
+  left: 5px;
 }
 
 .line {
@@ -251,7 +253,7 @@
   display: block;
   height: 3px;
   width: 100%;
-  background: black;
+  background: white;
   border-radius: 9px;
   opacity: 1;
   -webkit-transform: rotate(0deg);
@@ -275,6 +277,7 @@
   background: white;
   transition: .4s;
   transform: translateX(-300px);
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
   .underline {
     color: #c7b38e;
   }
@@ -285,6 +288,14 @@
   }
 }
 
+.line-active {
+  display: block;
+  height: 3px;
+  width: 100%;
+  background: black;
+  border-radius: 9px;
+  opacity: 1;
+}
 
 
 
@@ -322,6 +333,10 @@
       .col-5 {
         padding: 10px;
       }
+    }
+    .header-active {
+      background: none;
+      box-shadow: none;
     }
   }
 
